--- a/progress-steps/style.css
+++ b/progress-steps/style.css
@@ -1,45 +1,98 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
+:root {
+  --line-border-fill: #3498db;
+  --line-border-empty: #E0E0E0;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
+    background-color: #f1f1f1;
+    font-family: 'Muli', sans-serif;
     display: grid;
     place-items: center;
     height: 100dvh;
     width: 100%;
+    overflow: hidden;
 }
 .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:2rem
+    text-align: center;
 }
-.steps{
+
+.progress-container {
     display: flex;
-    align-items: center;
-}
-.step{
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 30px;
+    max-width: 100%;
+    width: 350px;
+  }
+
+.progress-container::before {
+    content: '';
+    background-color: var(--line-border-empty);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    height: 4px;
+    width: 100%;
+    z-index: -1;
+  }
+
+  .progress {
+    background-color: var(--line-border-fill);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    height: 4px;
+    width: 0%;
+    z-index: -1;
+    transition: 0.4s ease;
+  }
+
+  .circle {
+    background-color: #f1f1f1;
+    color:#b8b0b0;
     border-radius: 50%;
-    border:2px solid #E0E0E0;
-    padding:4px 8px;
-    font-size: 14px;
-    color: #9FABC7;    
-}
-.step.active{
-    border-width: 3px;
-    border-color: #3498DB;
-}
-.btn button{
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid var(--line-border-empty);
+    transition: 0.4s ease;    
+  }
+
+  .circle.active {
+    border-color: var(--line-border-fill);
+  }
+
+  .btn {
+    background-color: var(--line-border-fill);
     color: #fff;
-    padding: 6px 24px;
-    background-color: #3498DB;
-    border: none;
-    border-radius: 5px;
-}
-.stepper-line{
-    width:5rem;
-    height: 3px;
-    background-color:#E0E0E0;    
-}
+    border: 0;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: inherit;
+    padding: 8px 30px;
+    margin: 5px;
+    font-size: 14px;
+  }
+  .btn:active {
+    transform: scale(0.98);
+  }
+  .btn:focus {
+    outline: 0;
+  }
+  
+  .btn:disabled {
+    background-color: var(--line-border-empty);
+    cursor: not-allowed;
+  }
