--- a/split-landing-page/style.css
+++ b/split-landing-page/style.css
@@ -1,3 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
+:root {
+  --left-bg-color: rgba(87, 84, 236, 0.7);
+  --right-bg-color: rgba(43, 43, 43, 0.8);
+  --left-btn-hover-color: rgba(87, 84, 236, 1);
+  --right-btn-hover-color: rgba(28, 122, 28, 1);
+  --hover-width: 75%;
+  --other-width: 25%;
+  --speed: 1000ms;
+}
 * {
   box-sizing: border-box;
 }
@@ -16,32 +27,68 @@ body {
   height: 100%;
 }
 .left {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  border: 1px solid red;
+  flex: 1;
   background-image: url("./ps.jpg");
 }
 .left::before {
+  position: absolute;
   content: "";
   width: 100%;
   height: 100%;
-  background-color: aqua;
+  background-color: var(--left-bg-color);
 }
 .right {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  border: 1px solid red;
+  flex: 1;
   background-image: url("./xbox.jpg");
 }
 .right::before {
+  position: absolute;
   content: "";
   width: 100%;
   height: 100%;
-  background-color: aqua;
+  background-color: var(--right-bg-color);
+}
+.split h1 {
+  font-size: 4rem;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+}
+.btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  top: 40%;
+  transform: translateX(-50%);
+  text-decoration: none;
+  color: #fff;
+  border: #fff solid 0.2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 15rem;
+  padding: 1.5rem;
+}
+
+.split.left .btn:hover {
+  background-color: var(--left-btn-hover-color);
+  border-color: var(--left-btn-hover-color);
+}
+
+.split.right .btn:hover {
+  background-color: var(--right-btn-hover-color);
+  border-color: var(--right-btn-hover-color);
 }
