--- a/split-landing-page/style.css
+++ b/split-landing-page/style.css
@@ -12,58 +12,21 @@
 * {
   box-sizing: border-box;
 }
+
 body {
-  display: grid;
-  place-items: center;
-  height: 100dvh;
-  width: 100%;
+  font-family: "Roboto", sans-serif;
+  height: 100vh;
   overflow: hidden;
-  color: #fff;
+  margin: 0;
 }
-.container {
-  display: flex;
-  border: 1px solid red;
-  width: 100%;
-  height: 100%;
-}
-.left {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  background-image: url("./ps.jpg");
-}
-.left::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-color: var(--left-bg-color);
-}
-.right {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  background-image: url("./xbox.jpg");
-}
-.right::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-color: var(--right-bg-color);
-}
-.split h1 {
+h1 {
   font-size: 4rem;
+  color: #fff;
   position: absolute;
   left: 50%;
   top: 20%;
   transform: translateX(-50%);
+  white-space: nowrap;
 }
 .btn {
   position: absolute;
@@ -83,6 +46,13 @@ body {
   padding: 1.5rem;
 }
 
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #333;
+}
+
 .split.left .btn:hover {
   background-color: var(--left-btn-hover-color);
   border-color: var(--left-btn-hover-color);
@@ -91,4 +61,76 @@ body {
 .split.right .btn:hover {
   background-color: var(--right-btn-hover-color);
   border-color: var(--right-btn-hover-color);
+}
+
+.split {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.split.left {
+  left: 0;
+  background: url("ps.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.split.left::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--left-bg-color);
+}
+
+.split.right {
+  right: 0;
+  background: url("xbox.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.split.right::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--right-bg-color);
+}
+
+.split.right,
+.split.left,
+.split.right::before,
+.split.left::before {
+  transition: all var(--speed) ease-in-out;
+}
+
+.hover-left .left {
+  width: var(--hover-width);
+}
+
+.hover-left .right {
+  width: var(--other-width);
+}
+
+.hover-right .right {
+  width: var(--hover-width);
+}
+
+.hover-right .left {
+  width: var(--other-width);
+}
+
+@media (max-width: 800px) {
+  h1 {
+    font-size: 2rem;
+    top: 30%;
+  }
+
+  .btn {
+    padding: 1.2rem;
+    width: 12rem;
+  }
 }
