--- a/event-keycodes/style.css
+++ b/event-keycodes/style.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #383838;
+  background-color: #e1e1e1;
   font-family: "Muli", sans-serif;
   display: grid;
   place-items: center;
@@ -14,7 +14,7 @@ body {
 }
 .key {
   border: 1px solid #999999;
-  background-color: #2b2b2b;
+  background-color: #eeeeee;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   display: inline-flex;
   align-items: center;
@@ -24,7 +24,7 @@ body {
   flex-direction: column;
   margin: 10px;
   min-width: 150px;
-  color: white;
+  color: #000;
   position: relative;
 }
 
