--- a/incrementing-counter/style.css
+++ b/incrementing-counter/style.css
@@ -1,16 +1,35 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap");
 * {
   box-sizing: border-box;
 }
 body {
   display: grid;
   place-items: center;
-  background-color: #8e44ad;
   height: 100dvh;
+  background-color: #8e44ad;
+  color: #fff;
+  font-family: "Roboto Mono", sans-serif;
+  overflow: hidden;
+  margin: 0;
 }
 .container {
   display: flex;
+}
+.counter-container {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 2rem;
   text-align: center;
+  margin: 30px 50px;
+}
+
+.counter {
+  font-size: 60px;
+  margin-top: 10px;
+}
+
+@media (max-width: 580px) {
+  body {
+    flex-direction: column;
+  }
 }
