--- a/drink-water/style.css
+++ b/drink-water/style.css
@@ -1,45 +1,104 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
+
+:root {
+  --border-color: #144fc6;
+  --fill-color: #6ab3f8;
+}
+
 * {
   box-sizing: border-box;
 }
+
 body {
-  display: flex;
-  justify-content: center;
+  font-family: "Montserrat", sans-serif;
   background-color: #3494e4;
-  height: 100dvh;
-  margin: 0;
-  overflow: hidden;
   color: #fff;
-}
-.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  margin-bottom: 40px;
 }
-.bottle {
+
+h1 {
+  margin: 10px 0 0;
+}
+
+h3 {
+  font-weight: 400;
+  margin: 10px 0;
+}
+
+.cup {
+  background-color: #fff;
+  border: 4px solid var(--border-color);
+  color: var(--border-color);
+  border-radius: 0 0 40px 40px;
+  height: 330px;
+  width: 150px;
+  margin: 30px 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 24px;
-  border: 4px solid #144fc6;
-  background-color: #6ab3f8;
-  height: 20rem;
-  width: 10rem;
-  border-radius: 0px 0px 40px 40px;
+  flex-direction: column;
+  overflow: hidden;
 }
-.bottle-container {
+
+.cups {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  width: 18rem;
-}
-.small-bottle {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  border: 4px solid #144fc6;
-  background-color: #6ab3f8;
-  height: 7rem;
-  width: 4rem;
-  border-radius: 0px 0px 20px 20px;
+  justify-content: center;
+  width: 280px;
+}
+
+.cup.cup-small {
+  height: 95px;
+  width: 50px;
+  border-radius: 0 0 15px 15px;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 5px;
+  transition: 0.3s ease;
+}
+
+.cup.cup-small.full {
+  background-color: var(--fill-color);
+  color: #fff;
+}
+
+.remained {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex: 1;
+  transition: 0.3s ease;
+}
+
+.remained span {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.remained small {
+  font-size: 12px;
+}
+
+.percentage {
+  background-color: var(--fill-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 30px;
+  height: 0;
+  transition: 0.3s ease;
+}
+
+.text {
+  text-align: center;
+  margin: 0 0 5px;
 }
