changes in drag and drop

--- a/drag-n-drop/style.css
+++ b/drag-n-drop/style.css
@@ -21,7 +21,8 @@ body {
 }
 
 .fill {
-  background-image: url("https://source.unsplash.com/random/150x150");
+  background-image: url("https://png.pngtree.com/png-clipart/20190617/original/pngtree-document-vector-icon-png-image_3876242.jpg");
+  background-size: cover;
   height: 145px;
   width: 145px;
   cursor: pointer;
